--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@tailwindcss/typography": "^0.5.10",
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.1",
+        "daisyui": "^4.4.19",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.3.6",
