--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laradumps/laradumps": "^2.2",
+        "laradumps/laradumps-core": "^0.5.0",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
@@ -22,7 +24,8 @@
         "nunomaduro/larastan": "^2.7",
         "pestphp/pest": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "spatie/laravel-ray": "*"
     },
     "autoload": {
         "psr-4": {
