--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.1",
         "daisyui": "^4.4.19",
+        "husky": "^8.0.3",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.3.6",
