--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.7",
@@ -11,7 +12,7 @@
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.1",
         "daisyui": "^4.4.19",
-        "husky": "^8.0.3",
+        "husky": "^8.0.0",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.3.6",
